--- a/derash/templates/login.html
+++ b/derash/templates/login.html
@@ -58,7 +58,7 @@
         </form>
     </div>
     <div>
-        <small>Don't have an account? <a href="{{ url_for('app_views.register') }}">Sign Up</a></small>
+        <small>Don't have an account? <a href="{{ url_for('register') }}">Sign Up</a></small>
     </div>
 </body>
 </html>
