--- a/derash/templates/testing.html
+++ b/derash/templates/testing.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="jquery-3.7.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="{{ url_for('static', filename='scripts/testing.js') }}"></script>
 </head>
 <body>
-    
+    <a href="{{ url_for('logout') }}">Log out</a>
 </body>
 </html>
