Write the basic customer API endpoints

--- a/derash/templates/login.html
+++ b/derash/templates/login.html
@@ -36,14 +36,14 @@
                 <div>
                     {{ form.password.label }}
                     {% if form.password.errors %}
-                        {{ form.password }}
+                        {{ form.password(type="password") }}
                         <div>
                             {% for error in form.password.errors %}
                                 <span>{{ error }}</span>
                             {% endfor %}
                         </div>  
                     {% else %}
-                        {{ form.password }}
+                        {{ form.password(type=(password)) }}
                     {% endif %}
                 </div>
                 <div>
