--- a/derash/templates/register_customer.html
+++ b/derash/templates/register_customer.html
@@ -93,7 +93,7 @@
         <div>
             {{ form.submit }}
         </div>
-        <small><a href="#">Forgot password?</a></small>
+        <small><a href="{{ url_for('login') }}">Already have an account?</a></small>
     </form>
 </body>
 </html>
