--- a/derash/templates/select_user.html
+++ b/derash/templates/select_user.html
@@ -1,15 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div>
-        <a href="{{ url_for('register_customer') }}">Customer</a>
-        <a href="{{ url_for('register_owner') }}">Restaurant Manager</a>
-        <a href="{{ url_for('register_driver') }}">Driver</a>
+{% extends "layout.html" %}
+{% block meta %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/select_user.css') }}">
+    <title>Select how you wish to partner up with Derash</title>
+{% endblock %}
+{%  block header %}{% endblock header %}
+{%  block upper %}
+    <h1 class="user-choice">Happy you're here. <br/>How do you wish to use Derash?</h1>
+    <div class="user-selections">
+        <div class="customer-selection selection">
+            <h3>Customer</h3>
+            <img src="{{ url_for('static', filename='images/app-images/9434619-removebg-preview.png') }}" alt="A male avatar with curly hair with a blue background" class="avatar customer-avatar">
+            <ul>
+                <li><i class="fa-solid fa-check"></i><p>Choose from over a thousand local restaurants</p></li>
+                <li><i class="fa-solid fa-check"></i><p>Get to experience a variety of international cuisines at the comfort of your home</p></li>
+                <li><i class="fa-solid fa-check"></i><p>Enjoy a user-friendly ordering system, with an emphasis on transparency</p></li>
+            </ul>
+            <a href="{{ url_for('register_customer') }}">Become a Derash customer</a>
+        </div>
+        <div class="owner-selection selection">
+            <h3>Manager</h3>
+            <img src="{{ url_for('static', filename='images/app-images/9442242-removebg-preview.png') }}" alt="A young female avatar with a blue background" class="avatar owner-avatar">
+            <ul>
+                <li><i class="fa-solid fa-check"></i><p>Easily register and start acceping orders for all your restaurants with a single account</p></li>
+                <li><i class="fa-solid fa-check"></i><p>Experience the robust, and quick order management system</p></li>
+                <li><i class="fa-solid fa-check"></i><p>Get a 24/7 available view of the current and past orders, in any of your restaurants</p></li>
+            </ul>
+            <a href="{{ url_for('register_owner') }}">Become a Derash manager</a>
+        </div>
+        <div class="driver-selection selection">
+            <h3>Driver</h3>
+            <img src="{{ url_for('static', filename='images/app-images/9720027-removebg-preview.png') }}" alt="A young female avatar with a blue background" class="avatar driver-avatar">
+            <ul>
+                <li><i class="fa-solid fa-check"></i><p>Work on your own schedule, clocking in whenever you wish</p></li>
+                <li><i class="fa-solid fa-check"></i><p>Get a 24/7 available view of the current and past deliveries you have made</p></li>
+                <li><i class="fa-solid fa-check"></i><p>Enjoy the power to choose where, and when to deliver, with no restrictions</p></li>
+            </ul>
+            <a href="{{ url_for('register_driver') }}">Become a Derash driver</a>
+        </div>
     </div>
-</body>
-</html>
+    <small>Images by Freepik</small>
+{% endblock upper %}
+{%  block footer %}{% endblock footer %}
