--- a/derash/templates/layout.html
+++ b/derash/templates/layout.html
@@ -38,7 +38,7 @@
     {% endblock upper %}
     </div>
     {% block content %}
-    {%endblock%}
+    {% endblock content %}
     {% block footer %}
     <footer class="footer">
         <p class="copyright">Copyright &#169 Derash. All rights reserved</p>
