--- a/derash/templates/reset_password.html
+++ b/derash/templates/reset_password.html
@@ -1,36 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "register.html" %}
+{% block title %}Request a password reset{% endblock title %}
+{% block other %}
+    <style>
+        body {
+            background-color: rgb(56, 156, 73);
+        }
+    </style>
+{% endblock other %}
+{% block form %}
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset>
-            <div>Customer</div>
             <legend>Reset Password</legend>
-            <div>
+            <div class="field">
                 {{ form.password.label }}
                 {% if form.password.errors %}
                     {{ form.password(type="password") }}
                     <div>
                         {% for error in form.password.errors %}
-                            <span>{{ error }}</span>
+                            <span class="error-span">{{ error }}</span>
                         {% endfor %}
                     </div>  
                 {% else %}
                     {{ form.password(type="password") }}
                 {% endif %}
             </div>
-            <div>
+            <div class="field">
                 {{ form.confirm_password.label }}
                 {% if form.confirm_password.errors %}
                     {{ form.confirm_password(type="password") }}
                     <div>
                         {% for error in form.confirm_password.errors %}
-                            <span>{{ error }}</span>
+                            <span class="error-span">{{ error }}</span>
                         {% endfor %}
                     </div>  
                 {% else %}
@@ -38,9 +39,8 @@
                 {% endif %}
             </div>
         </fieldset>
-        <div>
+        <div class="submit reset-password-submit">
             {{ form.submit }}
         </div>
     </form>
-</body>
-</html>
+{% endblock form %}
