--- a/derash/templates/register_owner.html
+++ b/derash/templates/register_owner.html
@@ -1,88 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "register.html" %}
+{% block title %}Become part of the family, register to Derash as a manager{% endblock title %}
+{% block form %}
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset>
-            <div>Customer</div>
             <legend>Sign Up</legend>
-            <div>
+            <div class="field">
                 {{ form.first_name.label }}
                 {% if form.first_name.errors %}
                     {{ form.first_name }}
                     <div>
                         {% for error in form.first_name.errors %}
-                            <span>{{ error }}</span>
+                            <span class="error-span">{{ error }}</span>
                         {% endfor %}
                     </div>  
                 {% else %}
                     {{ form.first_name }}
                 {% endif %}
             </div>
-            <div>
+            <div class="field">
                 {{ form.last_name.label }}
                 {% if form.last_name.errors %}
                     {{ form.last_name }}
                     <div>
                         {% for error in form.last_name.errors %}
-                            <span>{{ error }}</span>
+                            <span class="error-span">{{ error }}</span>
                         {% endfor %}
                     </div>  
                 {% else %}
                     {{ form.last_name }}
                 {% endif %}
             </div>
-            <div>
+            <div class="field">
                 {{ form.email.label }}
                 {% if form.email.errors %}
                     {{ form.email }}
                     <div>
                         {% for error in form.email.errors %}
-                            <span>{{ error }}</span>
+                            <span class="error-span">{{ error }}</span>
                         {% endfor %}
                     </div>  
                 {% else %}
                     {{ form.email }}
                 {% endif %}
             </div>
-            <div>
+            <div class="field">
                 {{ form.password.label }}
                 {% if form.password.errors %}
                     {{ form.password(type="password") }}
                     <div>
                         {% for error in form.password.errors %}
-                            <span>{{ error }}</span>
+                            <span class="error-span">{{ error }}</span>
                         {% endfor %}
                     </div>  
                 {% else %}
                     {{ form.password(type="password") }}
                 {% endif %}
             </div>
-            <div>
+            <div class="field">
                 {{ form.confirm_password.label }}
                 {% if form.confirm_password.errors %}
                     {{ form.confirm_password(type="password") }}
                     <div>
                         {% for error in form.confirm_password.errors %}
-                            <span>{{ error }}</span>
+                            <span class="error-span">{{ error }}</span>
                         {% endfor %}
                     </div>  
                 {% else %}
                     {{ form.confirm_password(type="password") }}
                 {% endif %}
             </div>
-            <div>
+            <div class="field">
                 {{ form.phone_num.label }}
                 {% if form.phone_num.errors %}
                     {{ form.phone_num }}
                     <div>
                         {% for error in form.phone_num.errors %}
-                            <span>{{ error }}</span>
+                            <span class="error-span">{{ error }}</span>
                         {% endfor %}
                     </div>  
                 {% else %}
@@ -90,10 +84,9 @@
                 {% endif %}
             </div>
         </fieldset>
-        <div>
+        <div class="submit register-submit">
             {{ form.submit }}
         </div>
         <small><a href="{{ url_for('login') }}">Already have an account?</a></small>
     </form>
-</body>
-</html>
+{% endblock form %}
