--- a/derash/templates/layout.html
+++ b/derash/templates/layout.html
@@ -43,9 +43,9 @@
     <footer class="footer">
         <p class="copyright">Copyright &#169 Derash. All rights reserved</p>
         <div class="social-links">
-            <a href="https://github.com/Zennoon" class="github"><i class="fa-brands fa-github"></i></a>
-            <a href="https://linkedin.com/in/yunus-kedir" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://t.me/@Zennoon" class="telegram"><i class="fa-brands fa-telegram"></i></a>
+            <a href="https://github.com/Zennoon" target="_blank" class="github"><i class="fa-brands fa-github"></i></a>
+            <a href="https://linkedin.com/in/yunus-kedir" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://t.me/@Zennoon" target="_blank" class="telegram"><i class="fa-brands fa-telegram"></i></a>
         </div>
     </footer>
     {% endblock footer %}
