--- a/derash/templates/customer_home.html
+++ b/derash/templates/customer_home.html
@@ -1,5 +1,6 @@
 {% extends "logged_in_home.html" %}
 {% block meta %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/customer_home.css') }}">
     <script src="{{ url_for('static', filename='scripts/customer_home.js') }}"></script>
 {% endblock meta %}
 {% block nav_items %}
