--- a/derash/templates/logged_in_home.html
+++ b/derash/templates/logged_in_home.html
@@ -26,6 +26,7 @@
             <a href="#" class="nav-link">Account</a>
         </div>
     </header>
+    {% block main_content%}
     <div class="cont">
         <nav class="main-nav">
             <ul class="nav-items">
@@ -34,5 +35,6 @@
         </nav>
         <div class="content"></div>
     </div>
+    {% endblock main_content %}
 </body>
 </html>
